2002-03-08  Akim Demaille  <akim@epita.fr>

	* bin/autoconf.in, bin/autoheader.in, bin/autom4te.in,
	* bin/autoreconf.in, bin/autoscan.in, bin/autoupdate.in,
	* bin/ifnames.in: Copyright update.

	
2002-03-08  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Invoking autom4te): New.

2002-03-05  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Specifying Names): Clarification suggested by
	Kevin Ryde.

2002-03-05  Akim Demaille  <akim@epita.fr>

	Version 2.52i.

2002-03-04  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (AC_LIBOBJ vs. LIBOBJS): New.
	* lib/autoconf/general.m4 (AC_INIT): More informative error
	message for LIBOBJ.

2002-03-04  Akim Demaille  <akim@epita.fr>

	* lib/freeze.mk ($(build_libdir)/m4sugar/version.m4): New, for
	parallel builds.

2002-03-04  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Transforming Names): Equality between target
	and host is irrelevant.
	(Specifying Names, Canonicalizing): Remove all references to the
	backward compatibility hooks.  Rather, collect them all into...
	(Hosts and Cross-Compilation): this new section.
	* doc/install.texi (System Type): Ditto.
	* lib/autoconf/general.m4 (AC_CANONICAL_HOST): Explicitly state
	that `--host' implies cross-compilation.

2002-03-04  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Evaluation Macros): New.
	* lib/m4sugar/m4sugar.m4 (m4_lquote): Remove, it is totally
	useless.
	(_m4_foreach): Define the variant with immediate evaluation so
	that it contains exactly the items, not an expression which
	evaluation is the current item.
	(m4_re_string, m4_re_word): Don't over quote them.

2002-03-04  Akim Demaille  <akim@epita.fr>

	Instead of having stacking `shift's evaluated at the end, let
	`foreach' loops immediately evaluate them.

	* lib/m4sugar/m4sugar.m4 (m4_quote, m4_dquote): Use $@ rather than
	$*.  This is the n-th time I change my mind, but hopefully this is
	the last...
	(m4_lquote): New.